# poker

./: .gitignore  CMakeLists.txt  ninja-release.cmd  ninja-run-tests.cmd  ninja.cmd
src/: CMakeLists.txt
src/poker-evaluate/: CMakeLists.txt  bits.cc  bits.h  hand-eval.cc  hand-eval.h  hand-iterate.cc  hand-iterate.h  hand-parse.cc  hand-parse.h  hand-value.cc  hand-value.h  poker-evaluate.h  types.h
src/test-main/: CMakeLists.txt
src/test-poker-evaluate/: CMakeLists.txt  bits.cc  catch-rspec.hpp  hand-eval.cc  hand-iterate.cc  hand-parse.cc  hand-value.cc
